--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,13 +12,13 @@ body {
 	font-size: 18px;
 	color: #777777;
 	text-align: center;
-/*	background-image: url("../images/background.png");*/
-/*	background-repeat: repeat-x repeat-y;*/
+	background-image: url("../images/background.png");
+	background-repeat: repeat-x repeat-y;
 }
 
 .bodycontainer {
-	background-image: url("../images/background.png");
-	background-repeat: repeat-x repeat-y;
+/*	background-image: url("../images/background.png");
+	background-repeat: repeat-x repeat-y;*/
 	width: 100%;
 	height: auto;
 	overflow: auto;
@@ -57,7 +57,7 @@ nav {
 	padding-top: 25px;
 	padding-bottom: 15px;
 	margin: 0px auto 20px auto;
-	background: #ebebeb;
+	background: #ffffff;
 	width: 50%;
 	height: 75px;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -68,8 +68,8 @@ section {
 	float: left;
 	position: relative;
 	padding: 50px;
-	margin: 50px auto 20px auto;
-	background: black;
+	margin: 50px auto 0px auto;
+	background: #ffffff;
 	width: 650px;
 	height: 450px;
 	overflow: auto;
@@ -80,9 +80,11 @@ article {
 	top: 10px;
 	left: 10px;
 	right: 10px;
-	padding: 20px;
-	margin: 10px 10px;
-	color: #ebebeb;
+	padding-top: 20px;
+	padding-left: 10px;
+/*	padding: 20px;
+*//*	margin: 10px auto;
+*/	color: #ebebeb;
 	background: #ffffff;
 	width: 92%;
 	clear: both;
@@ -91,11 +93,12 @@ article {
 
 aside {
 	float: right;
+	position: relative;
 	padding: 50px;
 	margin: 50px 0px;
-	background: #ebebeb;
+	background: #ffffff;
 	width: 270px;
-	height: 350px;
+	height: 150px;
 }
 
 .headline {
@@ -125,9 +128,11 @@ footer {
 	bottom: 0;
 	padding: 20px;
 	margin: 0px auto;
-	background: #ebebeb;
+	background: #777777;
+	color: white;
 	width: 100%;
 	font-size: 8pt;
+	border-top: 2pt solid #4aaaa5;
 }
 
 .container {
@@ -153,6 +158,17 @@ h2 {
 	border-bottom: solid #dddddd 1px;
 }
 
+h4 {
+	font-family: Georgia, Times, 'Times New Roman', serif;
+	font-size: 12pt;
+	background: white;
+	color: #4aaaa5;
+	text-align: left;
+	font-weight: bold;
+	border-bottom: solid #dddddd 1px;
+	width: 95%;
+}
+
 .profile-pic {
 	float: left;
 	width: 200px;
@@ -173,3 +189,9 @@ position: relative;
    top: 50%;
    transform: translateY(-50%);*/
 
+.connect-icons {
+	float: left;
+	width: 55px;
+	height: 55px;
+	margin: 15px 5px;
+}
