--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,11 +114,10 @@ aside {
 p {
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	color: #777777;
-	font-size: 12pt; 
+	font-size: 10pt; 
 	padding: 15px;
 	margin: 15px 0px 5px 0px;
 	text-align: left;
-	font-size: 10pt;
 	line-height: 1.5;
 }
 
@@ -195,3 +194,45 @@ position: relative;
 	height: 55px;
 	margin: 15px 5px;
 }
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+label {
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	color: #777777;
+	font-size: 12pt;
+	text-align: left;
+/*	padding-top: 20px;*/
+}
+
+textarea {
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	color: #777777;
+}
+
+input[type=submit] {
+    background-color: #4aaaa5;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+ }
+
+ .contact-labels {
+ 	text-align: left;
+ 	margin-top: 20px;
+ }
+
+.contact-section {
+ 	height: 550px;
+ }
