--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ body {
 	text-align: center;
 	background-image: url("../images/background.png");
 	background-repeat: repeat-x repeat-y;
+	overflow: auto;
 }
 
 .bodycontainer {
@@ -73,6 +74,7 @@ section {
 	width: 650px;
 	height: 450px;
 	overflow: auto;
+	clear: both;
 }
 
 article {
@@ -126,7 +128,7 @@ footer {
 	left: 0;
 	bottom: 0;
 	padding: 20px;
-	margin: 0px auto;
+/*	margin: 0px auto;*/
 	background: #777777;
 	color: white;
 	width: 100%;
@@ -236,3 +238,43 @@ input[type=submit] {
 .contact-section {
  	height: 550px;
  }
+
+.portfolio-section {
+ 	min-height: 800px;
+ 	height: auto;
+/* 	margin-bottom: -30px;*/
+ }
+
+/* .push {
+ 	height: 30px;
+ }*/
+
+ .thumbnails {
+ 	position: relative;
+ 	float: left;
+	width: 250px;
+	height: 200px;
+	margin: 30px 20px 10px 0px;
+ }
+
+.thumbnail-header {
+	float: left;
+	position: absolute;
+	bottom: -20px;
+	width: 100%;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	margin: 0px auto;
+ 	background: #4aaaa5;
+ 	height: auto;
+ 	color: white;
+ 	font-weight: normal;
+ 	font-size: 10pt;
+	font-family: Georgia, Times, 'Times New Roman', serif;
+	clear: both;
+ }
+
+img {
+	max-width: 100%
+	max-height: 100%;
+}
