--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,8 @@ body {
 /*	background-image: url("../images/background.png");
 	background-repeat: repeat-x repeat-y;*/
 	width: 100%;
-	height: auto;
+/*	height: auto;*/
+	min-height: 1000px;
 	overflow: auto;
 }
 
@@ -36,6 +37,7 @@ body {
 	height: 75px;
 	font-family: Georgia, Times, 'Times New Roman', serif;
 	background: white;
+	border-bottom: solid 1px #cccccc;
 
 }
 
@@ -58,23 +60,26 @@ nav {
 	padding-top: 25px;
 	padding-bottom: 15px;
 	margin: 0px auto 20px auto;
-	background: #ffffff;
+/*	background: #ffffff;*/
 	width: 50%;
 	height: 75px;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 10pt;
+/*	border-bottom: solid 1px #cccccc;*/
 }
 
 section {
 	float: left;
 	position: relative;
-	padding: 50px;
+	padding-left: 30px;
+	padding-top: 50px;
 	margin: 50px auto 0px auto;
 	background: #ffffff;
 	width: 650px;
-	height: 450px;
-	overflow: auto;
+	min-height: 400px;
+	overflow: hidden;
 	clear: both;
+	border: solid 1px #dddddd;
 }
 
 article {
@@ -84,13 +89,10 @@ article {
 	right: 10px;
 	padding-top: 20px;
 	padding-left: 10px;
-/*	padding: 20px;
-*//*	margin: 10px auto;
-*/	color: #ebebeb;
+	color: #ebebeb;
 	background: #ffffff;
 	width: 92%;
 	clear: both;
-	
 }
 
 aside {
@@ -101,6 +103,7 @@ aside {
 	background: #ffffff;
 	width: 270px;
 	height: 150px;
+	border: solid 1px #cccccc;
 }
 
 .headline {
@@ -118,20 +121,20 @@ p {
 	color: #777777;
 	font-size: 10pt; 
 	padding: 15px;
-	margin: 15px 0px 5px 0px;
+	margin: 0px 0px 5px 0px;
 	text-align: left;
 	line-height: 1.5;
 }
 
 footer {
-	position: absolute;
-	left: 0;
-	bottom: 0;
+	position: fixed;
+	bottom: 0px;
 	padding: 20px;
-/*	margin: 0px auto;*/
+	margin: 50px auto 0px auto;
 	background: #777777;
 	color: white;
 	width: 100%;
+	height: 50px;
 	font-size: 8pt;
 	border-top: 2pt solid #4aaaa5;
 }
@@ -151,6 +154,10 @@ a {
 }
 
 h2 {
+	position: absolute;
+	top: 20px;
+	left: 30px;
+	right: 30px;
 	font-family: Georgia, Times, 'Times New Roman', serif;
 	background: white;
 	color: #4aaaa5;
@@ -174,17 +181,24 @@ h4 {
 	float: left;
 	width: 200px;
 	height: 200px;
-	margin: 30px 20px 10px 0px;
+	margin: 20px 20px 10px 0px;
 	
 }
-.clearfix:after {
+
+/*.profile-text {
+	height: auto;
+	overflow: hidden;
+
+}
+*/
+/*.clearfix:after {
 	content: " ";
 	visibility: hidden;
 	display: block;
 	height: 0px;
 	clear: both;
 }
-
+*/
 /*vertical centering
 position: relative;
    top: 50%;
@@ -194,7 +208,7 @@ position: relative;
 	float: left;
 	width: 55px;
 	height: 55px;
-	margin: 15px 5px;
+	margin: 15px 10px;
 }
 
 input[type=text], select, textarea {
@@ -242,7 +256,7 @@ input[type=submit] {
 .portfolio-section {
  	min-height: 800px;
  	height: auto;
-/* 	margin-bottom: -30px;*/
+ 	margin-bottom: -30px;
  }
 
 /* .push {
@@ -254,13 +268,13 @@ input[type=submit] {
  	float: left;
 	width: 250px;
 	height: 200px;
-	margin: 30px 20px 10px 0px;
+	margin: 15px 20px 15px 0px;
  }
 
 .thumbnail-header {
 	float: left;
 	position: absolute;
-	bottom: -20px;
+	bottom: -10px;
 	width: 100%;
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -278,3 +292,10 @@ img {
 	max-width: 100%
 	max-height: 100%;
 }
+
+/*.bodycontainer-wrap {
+	min-height: 100%;
+	margin-bottom: -50px;
+}
+
+*/
