--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,10 +18,7 @@ body {
 }
 
 .bodycontainer {
-/*	background-image: url("../images/background.png");
-	background-repeat: repeat-x repeat-y;*/
 	width: 100%;
-/*	height: auto;*/
 	min-height: 1000px;
 	overflow: auto;
 }
@@ -38,7 +35,6 @@ body {
 	font-family: Georgia, Times, 'Times New Roman', serif;
 	background: white;
 	border-bottom: solid 1px #cccccc;
-
 }
 
 header {
@@ -60,12 +56,10 @@ nav {
 	padding-top: 25px;
 	padding-bottom: 15px;
 	margin: 0px auto 20px auto;
-/*	background: #ffffff;*/
-	width: 50%;
+	width: 35%;
 	height: 75px;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 10pt;
-/*	border-bottom: solid 1px #cccccc;*/
 }
 
 section {
@@ -121,9 +115,9 @@ p {
 	color: #777777;
 	font-size: 10pt; 
 	padding: 15px;
-	margin: 0px 0px 5px 0px;
+	margin: 0px 15px 5px 0px;
 	text-align: left;
-	line-height: 1.5;
+	line-height: 2;
 }
 
 footer {
@@ -140,13 +134,10 @@ footer {
 }
 
 .container {
-/*	clear: both;*/
 	width: 960px;
 	height: 100%;
 	margin: 0 auto 0 auto;
 }
-
-
 
 a {
 	text-decoration: none;
@@ -185,20 +176,6 @@ h4 {
 	
 }
 
-/*.profile-text {
-	height: auto;
-	overflow: hidden;
-
-}
-*/
-/*.clearfix:after {
-	content: " ";
-	visibility: hidden;
-	display: block;
-	height: 0px;
-	clear: both;
-}
-*/
 /*vertical centering
 position: relative;
    top: 50%;
@@ -227,7 +204,6 @@ label {
 	color: #777777;
 	font-size: 12pt;
 	text-align: left;
-/*	padding-top: 20px;*/
 }
 
 textarea {
@@ -247,6 +223,7 @@ input[type=submit] {
  .contact-labels {
  	text-align: left;
  	margin-top: 20px;
+ 	padding-right: 30px;
  }
 
 .contact-section {
@@ -259,14 +236,10 @@ input[type=submit] {
  	margin-bottom: -30px;
  }
 
-/* .push {
- 	height: 30px;
- }*/
-
  .thumbnails {
  	position: relative;
  	float: left;
-	width: 250px;
+	width: 285px;
 	height: 200px;
 	margin: 15px 20px 15px 0px;
  }
@@ -293,9 +266,22 @@ img {
 	max-height: 100%;
 }
 
-/*.bodycontainer-wrap {
-	min-height: 100%;
-	margin-bottom: -50px;
+/* unvisited link */
+a:link {
+    color: #777777;
 }
 
-*/
+/* visited link */
+/*a:visited {
+    color: green;
+}*/
+
+/* mouse over link */
+a:hover {
+    color: tomato;
+}
+
+/* selected link */
+a:active {
+    color: #4aaaa5;
+}
