--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,8 +29,8 @@ body {
 }
 
 .container-header {
-	float: left;
-	width: 100%;
+/*	float: left;
+*/	width: 100%;
 	height: 75px;
 	font-family: Georgia, Times, 'Times New Roman', serif;
 	background: white;
